# cjclassifier

./: .gitignore  README.md  pom.xml
core/: pom.xml
core/src/main/java/com/jlpka/cjclassifier/: BigramToFloatArrayMap.java  CJClassifier.java  CJLanguage.java
core/src/test/java/com/jlpka/cjclassifier/: BigramToFloatArrayMapTest.java  CJClassifierBaseTest.java  CJClassifierReadModelTest.java
python/: .gitignore  Makefile  README.md  pyproject.toml
python/eval/: adhoc.py  load_model_speed.py  phrase_eval.py
python/src/cjclassifier/: __init__.py  classifier.py  language.py
python/tests/: test_classifier_base.py  test_classifier_real_model.py
rust/cjclassifier/: Cargo.toml  README.md
rust/cjclassifier/src/: bigram_map.rs  cjclassifier.h  ffi.rs  language.rs  lib.rs
rust/eval/: Cargo.toml
rust/eval/src/: adhoc.rs  load_speed.rs  phrase_eval.rs  usingffi.cpp
tools/: dependency-reduced-pom.xml  pom.xml
tools/src/main/java/com/jlpka/cjclassifier/tools/: ContentUtils.java  EvalTool.java  ModelBuilder.java  Pair.java
tools/src/test/java/com/jlpka/cjclassifier/tools/: ContentUtilsTest.java
